<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name" translatable="false">QField</string>
    <string name="lib_name" translatable="false">qfield</string>
    <string name="done_unpacking_msg">Done unpacking, start QGIS.</string>
    <string name="unpacking_title">QField is getting ready</string>
    <string name="unpacking_msg">This one-time operation will take a brief moment</string>
    <string name="unpacking_msg_following">Nearly there, hang tight!</string>
    <string name="use_internal_storage">Use Internal Storage</string>
    <string name="external_storage_unavailable">Unpacking post install data. This might take a some time.</string>
    <string name="noexternalstorage_dialog">Looks like your external storage (/sdcard) is not available. This happens when you connect your device to a PC via USB.\nQGIS can run from the internal storage but this is not recomended as it might be too small.\nIt is suggested to chose CANCEL, disconnect any USB cable and restart QGIS.</string>
    <string name="primary_storage">Internal storage</string>
    <string name="secondary_storage">QField files directory</string>
    <string name="secondary_storage_extra">Additional files directory</string>
    <string name="secondary_storage_read_only">External storage (read only)</string>
    <string name="inaccessible">inaccessible</string>
    <string name="loading">Loading</string>
    <string name="select_project">Select a QGIS project or dataset</string>
    <string name="recent_projects">Recent projects and datasets</string>
    <string name="rate_title">Rate QField</string>
    <string name="rate_message">If you enjoy using QField, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_now">Rate</string>
    <string name="remind_later">Remind me later</string>
    <string name="no_thanks">No, thanks!</string>
    <string name="favorite_directories">Favorite directories</string>
    <string name="favorites_sample_projects">Sample projects</string>
    <string name="favorites_imported_projects">Imported projects</string>
    <string name="favorites_imported_datasets">Imported datasets</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="external_files_title">Important Note</string>
    <string name="external_files_message"><![CDATA[The QField files directory can be used to copy files and projects onto your device via USB cable. You can see the directory\'s absolute path in the header bar.<br/><br/>Be aware that content of this directory <i>will be deleted</i> if you uninstall QField from your device.]]></string>
    <string name="external_files_ok">OK</string>
    <string name="grant_permission">All files access</string>
    <string name="grant_all_files_permission"><![CDATA[QField needs all files access permission to be able to open local projects and datasets as well as supporting custom projection grids, fonts, and base maps. While not required, <i>allowing access is highly recommended</i>.<br/><br/>On the next screen, please select <b>QField</b> and select the <b>Allow access to all files</b> option.]]></string>
    <string name="grant">Allow</string>
    <string name="deny_always">Deny Permanently</string>
    <string name="deny_once">Deny Once</string>
    <string name="import_project_folder">Import Project from Folder</string>
    <string name="import_project_archive">Import Project from ZIP</string>
    <string name="import_dataset">Import Dataset(s)</string>
    <string name="update_project_from_archive">Update Project from ZIP</string>
    <string name="usb_cable_help">Storage Management Help</string>
    <string name="import_error">Import Error</string>
    <string name="import_dataset_error">The selected dataset(s) could not be imported properly.</string>
    <string name="import_project_archive_error">The selected project archive was not imported properly.</string>
    <string name="import_project_folder_error">The selected project folder was not imported properly.</string>
    <string name="import_overwrite_title">Import Warning</string>
    <string name="import_overwrite_folder">This project folder already exists. This operation will overwrite its data, proceed with import?</string>
    <string name="import_overwrite_dataset_single">This dataset already exists. This operation will overwrite it, proceed with import?</string>
    <string name="import_overwrite_dataset_multiple">One or more datasets already exists. This operation will overwrite these, proceed with import?</string>
    <string name="import_overwrite_confirm">Import and Overwrite</string>
    <string name="import_overwrite_cancel">Cancel</string>
    <string name="export_error">Export Error</string>
    <string name="export_to_folder_error">The selected project folder was not exported properly.</string>
    <string name="send_to">Send to...</string>
    <string name="send_compressed_to">Send Compressed Folder to...</string>
    <string name="export_to_folder">Export to Folder...</string>
    <string name="add_to_favorite">Add to Favorites</string>
    <string name="remove_from_favorite">Remove from Favorites</string>
    <string name="remove_dataset">Remove Dataset</string>
    <string name="remove_folder">Remove Project Folder</string>
    <string name="delete_confirm_title">Removal Confirmation</string>
    <string name="delete_confirm_dataset">The dataset will be permamently deleted, proceed with removal?</string>
    <string name="delete_confirm_folder">The project folder will be permamently deleted, proceed with removal?</string>
    <string name="delete_confirm">Remove</string>
    <string name="delete_cancel">Cancel</string>
    <string name="storage_information_title">Storage Information</string>
    <string name="storage_information_message">Whether you are a pre-existing QField 1.x user wondering why your projects and datasets have gone missing or new to QField, we suggest you take a minute to read the storage handling documentation. A shortcut to this documentation will remain accessible in the title bar\'s actions menu.</string>
    <string name="storage_information_view">Show me the documentation</string>
    <string name="storage_information_dismiss">I\'ll read later</string>
    <string name="import_project_wait">Please wait while QField is importing the project</string>
    <string name="import_dataset_wait">Please wait while QField is importing the dataset(s)</string>
    <string name="update_project_wait">Please wait while QField is updating the local project</string>
    <string name="upload_pending_attachments">Currently uploading attachments to QFieldCloud</string>
    <string name="operation_unsupported">Operation Unsupported</string>
    <string name="import_operation_unsupported">Your device does not support this import operation.</string>
    <string name="export_operation_unsupported">Your device does not support this export operation.</string>
</resources>
