<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_to_favorite"
        android:title="@string/add_to_favorite"
        app:showAsAction="never" />
    <item android:id="@+id/remove_from_favorite"
        android:title="@string/remove_from_favorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/send_compressed_to"
        android:title="@string/send_compressed_to"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_to_folder"
        android:title="@string/export_to_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove_folder"
        android:title="@string/remove_folder"
        app:showAsAction="never" />

</menu>
